<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto">

    <Preference
        app:key="nasux"
        app:title="@string/nasux_preferences_title"
        app:summary="@string/nasux_preferences_summary"
        app:fragment="com.nastech.nasux.app.fragments.settings.NasUXPreferencesFragment"/>

    <Preference
        app:key="nasux_api"
        app:title="@string/nasux_api_preferences_title"
        app:summary="@string/nasux_api_preferences_summary"
        app:isPreferenceVisible="false"
        app:fragment="com.nastech.nasux.app.fragments.settings.NasUXAPIPreferencesFragment"/>

    <Preference
        app:key="nasux_float"
        app:title="@string/nasux_float_preferences_title"
        app:summary="@string/nasux_float_preferences_summary"
        app:isPreferenceVisible="false"
        app:fragment="com.nastech.nasux.app.fragments.settings.NasUXFloatPreferencesFragment"/>

    <Preference
        app:key="nasux_tasker"
        app:title="@string/nasux_tasker_preferences_title"
        app:summary="@string/nasux_tasker_preferences_summary"
        app:isPreferenceVisible="false"
        app:fragment="com.nastech.nasux.app.fragments.settings.NasUXTaskerPreferencesFragment"/>

    <Preference
        app:key="nasux_widget"
        app:title="@string/nasux_widget_preferences_title"
        app:summary="@string/nasux_widget_preferences_summary"
        app:isPreferenceVisible="false"
        app:fragment="com.nastech.nasux.app.fragments.settings.NasUXWidgetPreferencesFragment"/>

    <Preference
        app:key="about"
        app:title="@string/about_preference_title"
        app:persistent="false"/>
    <!-- app:layout="@layout/preference_markdown_text" -->

    <Preference
        app:key="donate"
        app:title="@string/donate_preference_title"
        app:persistent="false"
        app:isPreferenceVisible="false"/>

</PreferenceScreen>
